# checkers_bot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  activation.cpp  activation.hpp  board.cpp  board.hpp  checkersdisplay.cpp  checkersdisplay.hpp  checkersgame.cpp  checkersgame.hpp  initializer.cpp  initializer.hpp  layer.cpp  layer.hpp  main.cpp  mctsnode.cpp  mctsnode.hpp  move.cpp  move.hpp  movegen.cpp  movegen.hpp  network.cpp  network.hpp  nnmain.cpp  searching.cpp  searching.hpp
test/: CMakeLists.txt  catch.hpp  testcheckers.cpp
